--- a/client/src/Components/DoctorsWorkbench/doctor_workbench.css
+++ b/client/src/Components/DoctorsWorkbench/doctor_workbench.css
@@ -274,3 +274,202 @@
     z-index: 9999;
     box-shadow: 0 0px 200px #1a1a1a;
     display: none; }
+
+.doctor_workbench .panel-layout {
+  margin-top: 10px; }
+
+.doctor_workbench .go-button {
+  cursor: pointer;
+  margin-top: 15px; }
+
+.doctor_workbench .opPatientList .opList {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  height: 65.5vh;
+  overflow: auto; }
+  .doctor_workbench .opPatientList .opList .noPatientDiv {
+    margin-top: 15%;
+    text-align: center;
+    color: #929292; }
+  .doctor_workbench .opPatientList .opList li {
+    margin: 4px 0;
+    padding: 3px 0;
+    list-style: none;
+    border: 1px solid #f2f2f2;
+    background: #fff;
+    border-radius: 5px; }
+    .doctor_workbench .opPatientList .opList li .op-sec-1 {
+      width: 10px;
+      width: 20%;
+      vertical-align: text-top;
+      display: inline-block;
+      text-align: center;
+      border-right: 1px dashed #e6e6e6;
+      margin-right: 10px; }
+      .doctor_workbench .opPatientList .opList li .op-sec-1 i {
+        width: 30px;
+        background: yellow;
+        height: 30px;
+        display: block;
+        margin: auto; }
+      .doctor_workbench .opPatientList .opList li .op-sec-1 .appointment-icon {
+        background: url("../../assets/icons/appointment-icon.svg") no-repeat center;
+        background-size: 80%; }
+      .doctor_workbench .opPatientList .opList li .op-sec-1 .walking-icon {
+        background: url("../../assets/icons/walking-icon.svg") no-repeat center;
+        background-size: 80%; }
+    .doctor_workbench .opPatientList .opList li .op-sec-2 {
+      width: 10px;
+      width: 56%;
+      vertical-align: text-top;
+      display: inline-block; }
+      .doctor_workbench .opPatientList .opList li .op-sec-2 .opPatientName {
+        display: block;
+        margin-top: 5px; }
+      .doctor_workbench .opPatientList .opList li .op-sec-2 .opStatus {
+        display: block; }
+      .doctor_workbench .opPatientList .opList li .op-sec-2 .nursing {
+        color: #34b8bc; }
+      .doctor_workbench .opPatientList .opList li .op-sec-2 .checkedIn {
+        color: #00bb4b; }
+    .doctor_workbench .opPatientList .opList li .op-sec-3 {
+      width: 20%;
+      line-height: 53px;
+      vertical-align: text-top;
+      display: inline-block;
+      text-align: center; }
+      .doctor_workbench .opPatientList .opList li .op-sec-3 .opPatientStatus {
+        display: block; }
+      .doctor_workbench .opPatientList .opList li .op-sec-3 .newVisit {
+        color: #ff8800; }
+      .doctor_workbench .opPatientList .opList li .op-sec-3 .followUp {
+        color: #ff005f; }
+  .doctor_workbench .opPatientList .opList li:hover {
+    background: #ebfeff;
+    cursor: pointer; }
+
+.doctor_workbench #encounter_table .ReactTable {
+  max-height: 65.5vh !important; }
+
+.doctor_workbench .bottom-layout {
+  padding: 5px; }
+  .doctor_workbench .bottom-layout .right-bottom-panel {
+    margin-top: 5px; }
+  .doctor_workbench .bottom-layout .appointment-panel {
+    /* The actual timeline (the vertical ruler) */
+    /* Container around content */
+    /* The circles on the timeline */
+    /* Place the container to the left */
+    /* Place the container to the right */
+    /* Add arrows to the left container (pointing right) */
+    /* Add arrows to the right container (pointing left) */
+    /* Fix the circle for containers on the right side */
+    /* The actual content */
+    /* Media queries - Responsive timeline on screens less than 600px wide */ }
+    .doctor_workbench .bottom-layout .appointment-panel .timeline {
+      position: relative;
+      max-width: 1200px;
+      margin: 0 auto; }
+    .doctor_workbench .bottom-layout .appointment-panel .timeline::after {
+      content: "";
+      position: absolute;
+      width: 2px;
+      background-color: #000;
+      top: 0;
+      bottom: 0;
+      left: 50%;
+      margin-left: -3px; }
+    .doctor_workbench .bottom-layout .appointment-panel .container {
+      padding: 10px 40px;
+      position: relative;
+      background-color: inherit;
+      width: 50%; }
+    .doctor_workbench .bottom-layout .appointment-panel .container::after {
+      content: "";
+      position: absolute;
+      width: 25px;
+      height: 25px;
+      right: -17px;
+      background-color: white;
+      border: 4px solid #ff9f55;
+      top: 15px;
+      border-radius: 50%;
+      z-index: 1; }
+    .doctor_workbench .bottom-layout .appointment-panel .left {
+      left: 0; }
+    .doctor_workbench .bottom-layout .appointment-panel .right {
+      left: 50%; }
+    .doctor_workbench .bottom-layout .appointment-panel .left::before {
+      content: " ";
+      height: 0;
+      position: absolute;
+      top: 22px;
+      width: 0;
+      z-index: 1;
+      right: 30px;
+      border: medium solid white;
+      border-width: 10px 0 10px 10px;
+      border-color: transparent transparent transparent white; }
+    .doctor_workbench .bottom-layout .appointment-panel .right::before {
+      content: " ";
+      height: 0;
+      position: absolute;
+      top: 22px;
+      width: 0;
+      z-index: 1;
+      left: 30px;
+      border: medium solid white;
+      border-width: 10px 10px 10px 0;
+      border-color: transparent white transparent transparent; }
+    .doctor_workbench .bottom-layout .appointment-panel .right::after {
+      left: -16px; }
+    .doctor_workbench .bottom-layout .appointment-panel .content {
+      padding: 20px 30px;
+      background-color: white;
+      position: relative;
+      border-radius: 6px; }
+    @media screen and (max-width: 600px) {
+      .doctor_workbench .bottom-layout .appointment-panel {
+        /* Place the timelime to the left */
+        /* Full-width containers */
+        /* Make sure that all arrows are pointing leftwards */
+        /* Make sure all circles are at the same spot */
+        /* Make all right containers behave like the left ones */ }
+        .doctor_workbench .bottom-layout .appointment-panel .timeline::after {
+          left: 31px; }
+        .doctor_workbench .bottom-layout .appointment-panel .container {
+          width: 100%;
+          padding-left: 70px;
+          padding-right: 25px; }
+        .doctor_workbench .bottom-layout .appointment-panel .container::before {
+          left: 60px;
+          border: medium solid white;
+          border-width: 10px 10px 10px 0;
+          border-color: transparent white transparent transparent; }
+        .doctor_workbench .bottom-layout .appointment-panel .left::after,
+        .doctor_workbench .bottom-layout .appointment-panel .right::after {
+          left: 15px; }
+        .doctor_workbench .bottom-layout .appointment-panel .right {
+          left: 0%; } }
+  .doctor_workbench .bottom-layout .grey-label {
+    color: #292929;
+    padding-left: 10px;
+    padding-top: 5px;
+    font-style: bolder; }
+  .doctor_workbench .bottom-layout .grey-label-right {
+    color: #292929;
+    padding-right: 10px;
+    padding-top: 5px;
+    font-style: bolder; }
+
+.doctor_workbench .rightLabelCount .countNo {
+  background: #2aafa4;
+  color: #fff;
+  padding: 2px 10px;
+  border-radius: 25%;
+  margin-left: 3px;
+  display: inline-block; }
+
+.doctor_workbench .rightLabelCount .style_Label {
+  text-transform: initial; }
