--- a/client/src/Components/PatientProfile/Dental/Dental.scss
+++ b/client/src/Components/PatientProfile/Dental/Dental.scss
@@ -76,6 +76,7 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     cursor: pointer;
     position: relative;
+    font-size: 0.7em;
   }
 
   .surface-Marking div:hover {
