--- a/client/src/Components/PatientProfile/patientprofile.scss
+++ b/client/src/Components/PatientProfile/patientprofile.scss
@@ -155,6 +155,7 @@
           padding: 9px 15px 8px;
           color: #858585;
           cursor: pointer;
+          font-size: 0.8em;
         }
         span.active {
           border-bottom: solid 3px #00a9ad;
@@ -168,7 +169,6 @@
             display: none !important;
             border: none !important;
             cursor: pointer;
-            border: 1px solid red;
           }
         }
       }
