--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -1378,6 +1378,7 @@ th {
     padding: 0;
     margin: 0;
     display: block;
+    font-size: 0.8em;
     text-transform: uppercase; }
   .my-calendar .activeDate {
     border-bottom: 4px solid yellow !important;
