--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -1779,7 +1779,6 @@ th {
 
   .calendar .col {
     border: 1px solid darken($primary-color, 10%);
-
     padding-right: 3px;
     padding-left: 3px;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
@@ -1794,7 +1793,7 @@ th {
     padding: 0;
     margin: 0;
     display: block;
-
+    font-size: 0.8em;
     text-transform: uppercase;
   }
   .activeDate {
