--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -998,13 +998,16 @@
           border-color: lighten($color-black, 10%);
         }
       }
+
       .btn-other {
         background: none;
-        color: $color-white;
-        border: 1px solid lighten($color-white, 10%);
+        color: lighten($color-black, 50%);
+        border: 1px solid lighten($color-black, 50%);
         &:hover,
         &:focus {
-          background-color: lighten($color-black, 10%);
+          background-color: darken($primary-color, 10%);
+          color: $color-white !important;
+          border-color: lighten($primary-color, 10%);
         }
       }
     }
