--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -87,10 +87,12 @@ body {
 
 :global .btn-other {
   background: none;
-  color: #fff;
-  border: 1px solid white; }
+  color: gray;
+  border: 1px solid gray; }
   :global .btn-other:hover, :global .btn-other:focus {
-    background-color: #1a1a1a; }
+    background-color: #299194;
+    color: #fff !important;
+    border-color: #53ccd0; }
 
 :global .inner-top-search {
   background: #fff;
@@ -533,9 +535,11 @@ body {
   :global .hptl-phase1-footer .btn-other {
     background: none;
     color: #fff;
-    border: 1px solid white; }
+    border: 1px solid #cccccc; }
     :global .hptl-phase1-footer .btn-other:hover, :global .hptl-phase1-footer .btn-other:focus {
-      background-color: #1a1a1a; }
+      background-color: #299194;
+      color: #fff !important;
+      border-color: #53ccd0; }
 
 :global .hptl-phase1-master-footer .main {
   background-color: #fff !important;
