--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -104,11 +104,13 @@ body {
 
   .btn-other {
     background: none;
-    color: $color-white;
-    border: 1px solid lighten($color-white, 10%);
+    color: lighten($color-black, 50%);
+    border: 1px solid lighten($color-black, 50%);
     &:hover,
     &:focus {
-      background-color: lighten($color-black, 10%);
+      background-color: darken($primary-color, 10%);
+      color: $color-white !important;
+      border-color: lighten($primary-color, 10%);
     }
   }
 
@@ -649,13 +651,16 @@ body {
       text-transform: uppercase;
       min-width: 70px;
     }
+
     .btn-other {
       background: none;
       color: $color-white;
-      border: 1px solid lighten($color-white, 10%);
+      border: 1px solid lighten($color-black, 80%);
       &:hover,
       &:focus {
-        background-color: lighten($color-black, 10%);
+        background-color: darken($primary-color, 10%);
+        color: $color-white !important;
+        border-color: lighten($primary-color, 10%);
       }
     }
   }
