--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,8 +42,7 @@
       /* border-bottom: 1px solid #3d3d3d; */
       border-top: 1px solid #e5e5e5;
       display: block;
-      width: 100%;
-      background: #000; }
+      width: 100%; }
     :global .print-body .hospitalLogo {
       color: #ccc;
       text-align: center;
