resolved Report UI font issues

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -99,6 +99,7 @@
         color: #000000;
         border: 1px solid #c5c5c5;
 
+        font-size: 0.55em;
         line-height: 29px;
         border-radius: 5px 5px 0 0;
       }
@@ -163,7 +164,7 @@
       vertical-align: middle !important;
       background-color: #e8feff !important;
       padding: 5px;
-
+      font-size: 0.8em;
       text-transform: uppercase;
       text-align: center;
       border-right: 1px solid darken($primary-color, 10%);
