--- a/client/src/Components/Reports/reports.css
+++ b/client/src/Components/Reports/reports.css
@@ -10,7 +10,8 @@
     .reports .reportList div i {
       text-align: center;
       color: #33b7bc;
-      margin-bottom: 10px; }
+      margin-bottom: 10px;
+      font-size: 2.8em; }
   .reports .reportList div:hover {
     background: #f2ffff;
     box-shadow: 0 0 10px #eee; }
