--- a/client/src/Components/Reports/reports.scss
+++ b/client/src/Components/Reports/reports.scss
@@ -11,9 +11,9 @@
       cursor: pointer;
       i {
         text-align: center;
-
         color: #33b7bc;
         margin-bottom: 10px;
+        font-size: 2.8em;
       }
     }
     div:hover {
