--- a/client/src/index.css
+++ b/client/src/index.css
@@ -82,6 +82,7 @@
         padding: 5px 15px;
         color: #000000;
         border: 1px solid #c5c5c5;
+        font-size: 0.55em;
         line-height: 29px;
         border-radius: 5px 5px 0 0; }
     :global .print-body section:after {
@@ -124,6 +125,7 @@
       vertical-align: middle !important;
       background-color: #e8feff !important;
       padding: 5px;
+      font-size: 0.8em;
       text-transform: uppercase;
       text-align: center;
       border-right: 1px solid #299194; }
