--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -108,7 +108,7 @@ body {
   position: absolute;
   top: -11px;
   left: 5px;
-  background: #fff;
+  background: white;
   padding: 2px 6px 4px; }
 
 :global .algaehLabelFormGroup {
