--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -128,7 +128,7 @@ body {
     position: absolute;
     top: -11px;
     left: 5px;
-    background: $color-white;
+    background: lighten($color-white, 10%);
     padding: 2px 6px 4px;
   }
   .algaehLabelFormGroup {
