--- a/client/src/Components/DoctorsWorkbench/doctor_workbench.scss
+++ b/client/src/Components/DoctorsWorkbench/doctor_workbench.scss
@@ -66,74 +66,71 @@
           height: calc(100vh - 407px);
           .appSection {
             border-top: 1px solid lighten($color-black, 80%);
-            border-bottom: 1px solid lighten($color-black, 80%);
-            /* display: block; */
             float: left;
-            margin-bottom: 2px;
+            font-size: 0.8em;
             .appIconSec {
               float: left;
-              height: 75px;
-              width: 75px;
+              width: 60px;
               text-align: center;
-              border-right: 1px solid lighten($color-black, 80%);
+              font-size: 0.8em;
+              font-weight: bold;
               i {
                 display: block;
-                font-size: 1.5em;
+                font-size: 2em;
                 margin-top: 14px;
                 margin-bottom: 5px;
               }
             }
-            .patName {
+            .apptDetailsSec {
+              width: 180px;
               float: left;
-              height: 75px;
-              width: 159px;
-              padding-left: 5px;
-              padding-top: 5px;
-            }
-            .patVisit {
-              float: left;
-              height: 20px;
-              width: 75px;
-              border-right: 1px solid lighten($color-black, 80%);
-              border-top: 1px dotted lighten($color-black, 80%);
-              text-align: center;
-              font-size: 0.85em;
-            }
-            .patStatus {
-              border-top: 1px dotted lighten($color-black, 80%);
-              float: left;
-              height: 20px;
-              width: 159px;
-              padding-left: 5px;
-              font-size: 0.85em;
-              &.inProgress {
+              padding: 5px;
+              border-left: 1px solid lighten($color-black, 80%);
+              min-height: 60px;
+              .patName {
+                display: block;
                 font-weight: bold;
+                font-size: 1.2em;
+                min-height: 29px;
               }
-              &.nursingDone {
-                background: $primary-color;
-                color: $color-white;
+              .patVisit {
+                display: inline-block;
               }
-              &.nursingGoing {
-                background: rgb(255, 255, 181);
-              }
-              &.checkedIn {
-                background: #a0c6ff;
-              }
-              &.notShown {
-                background: lighten($color-black, 70%);
+              .patStatus {
+                display: inline-block;
+                text-align: right;
+                float: right;
+                span {
+                  &.inProgress {
+                    font-weight: bold;
+                    color: rgb(236, 92, 9);
+                  }
+                  &.nursingDone {
+                    color: $primary-color;
+                  }
+                  &.nursingGoing {
+                    color: rgb(91, 94, 235);
+                  }
+                  &.checkedIn {
+                    background: #a0c6ff;
+                  }
+                  &.notShown {
+                    background: lighten($color-black, 70%);
+                  }
+                }
+                &.active {
+                  background: $primary-color;
+                  color: $color-white;
+                  &:hover {
+                    background: darken($primary-color, 10%);
+                    color: $color-white;
+                    cursor: pointer;
+                  }
+                }
               }
             }
             &:nth-child(odd) {
               background: lighten($color-black, 95%);
-            }
-            &.active {
-              background: $primary-color;
-              color: $color-white;
-              &:hover {
-                background: darken($primary-color, 10%);
-                color: $color-white;
-                cursor: pointer;
-              }
             }
             &:hover {
               background: lighten($primary-color, 40%);
