--- a/client/src/Components/FrontDesk/front_desk.css
+++ b/client/src/Components/FrontDesk/front_desk.css
@@ -2,12 +2,13 @@
   z-index: 1031;
   position: fixed;
   top: 56px;
-  left: 23%;
+  right: 85px;
   display: block;
   height: 65px;
-  border: 1px solid #cdd4db;
+  border: 1px solid #53ccd0;
   width: 110px;
-  white-space: unset; }
+  white-space: unset;
+  background: #dcfeff; }
   .front-desk .bk-bn i {
     display: block;
     margin-bottom: 5px; }
