--- a/client/src/Components/FrontDesk/front_desk.scss
+++ b/client/src/Components/FrontDesk/front_desk.scss
@@ -3,17 +3,17 @@
     z-index: 1031;
     position: fixed;
     top: 56px;
-    left: 23%;
+    right: 85px;
     display: block;
     height: 65px;
-    border: 1px solid #cdd4db;
+    border: 1px solid #53ccd0;
     width: 110px;
     white-space: unset;
-    
+    background: #dcfeff;
+
     i {
       display: block;
       margin-bottom: 5px;
-      
     }
   }
 }
