Updated UI for Employee Shift Roster

--- a/client/src/Components/EmployeeShiftRostering/EmployeeShiftRostering.css
+++ b/client/src/Components/EmployeeShiftRostering/EmployeeShiftRostering.css
@@ -1,3 +1,10 @@
+.EmpShiftRost_Screen .legends {
+  color: white;
+  font-size: 12px;
+  padding: 5px;
+  font-size: 0.7em;
+  border-radius: 6px; }
+
 .EmpShiftRost_Screen #shiftRosterTable {
   overflow: auto;
   border: 1px solid #d2d2d2; }
@@ -6,7 +13,7 @@
     box-sizing: border-box;
     table-layout: fixed;
     min-height: 20vh;
-    max-height: 70vh; }
+    max-height: 55vh; }
     .EmpShiftRost_Screen #shiftRosterTable table thead th {
       padding: 3px;
       text-align: center;
