--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -705,6 +705,7 @@
       position: relative;
       padding-left: 20px;
       text-transform: capitalize;
+      font-size: 1.2em;
     }
     .radio span:after {
       content: "";
@@ -768,6 +769,7 @@
       position: relative;
       padding-left: 20px;
       text-transform: capitalize;
+      font-size: 1.2em;
     }
     .checkbox span:after {
       content: "";
