UI Tweak for OP billing and added select all for salary process.

--- a/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails.css
+++ b/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails.css
@@ -32,3 +32,8 @@
 
 .gridWithRadio table th:first-child {
   width: 16px !important; }
+
+#opVisitGrid_Cntr .ReactTable {
+  max-height: 30vh !important;
+  margin-top: -5px;
+  margin-bottom: 15px; }
