--- a/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails.scss
+++ b/client/src/Components/OPBilling/VisitDetails/DisplayVisitDetails.scss
@@ -49,3 +49,10 @@
     }
   }
 }
+#opVisitGrid_Cntr{
+  .ReactTable{
+    max-height: 30vh !important;
+    margin-top: -5px;
+    margin-bottom: 15px;
+  }
+}
