Changed Server Scripts, added Lab and Radiology Micro Service Build

--- a/client/src/Components/EmployeeManagement/HRSettings/DocumentMaster/doc_master.css
+++ b/client/src/Components/EmployeeManagement/HRSettings/DocumentMaster/doc_master.css
@@ -3,9 +3,7 @@
   padding-bottom: 15px;
   border-radius: 5px;
   border: 1px solid #d3d3d3;
-  background: #ffff;
-}
+  background: #ffff; }
 
 #docTypeDivGrid_Cntr .ReactTable {
-  max-height: 72vh !important;
-}
+  max-height: 72vh !important; }
