minor UI fix in POS

--- a/client/src/Components/Pharmacy/PointOfSale/PosListItems/PosListItems.css
+++ b/client/src/Components/Pharmacy/PointOfSale/PosListItems/PosListItems.css
@@ -22,7 +22,9 @@
   .hptl-phase1-op-add-billing-form .Paper {
     background: #fff;
     min-height: 35vh;
-    border: 1px solid #d3d3d3; }
+    border: 1px solid #d3d3d3;
+    padding: 15px;
+    border-radius: 5px; }
   .hptl-phase1-op-add-billing-form th,
   .hptl-phase1-op-add-billing-form td {
     border-right: 1px solid #e6e6e6; }
