--- a/client/src/Components/Pharmacy/PointOfSale/PosListItems/PosListItems.scss
+++ b/client/src/Components/Pharmacy/PointOfSale/PosListItems/PosListItems.scss
@@ -36,6 +36,8 @@
     background: #fff;
     min-height: 35vh;
     border: 1px solid #d3d3d3;
+    padding: 15px;
+    border-radius:5px;
   }
 
   th,
