--- a/client/src/Components/EmployeeShiftRostering/EmployeeShiftRostering.scss
+++ b/client/src/Components/EmployeeShiftRostering/EmployeeShiftRostering.scss
@@ -1,69 +1,93 @@
 .EmpShiftRost_Screen {
-	.legends{
-		color: white;
-		font-size: 12px;
-		padding: 5px;
-		font-size: 0.7em;
-		border-radius: 6px;
-	}
-	#shiftRosterTable {
-		overflow: auto;
-		border: 1px solid #d2d2d2;
-		table {
-			width: 100%;
-			box-sizing: border-box;
-			table-layout: fixed;
-			min-height: 20vh;
-			max-height: 55vh;
-			thead {
-				th {
-					//			display: table-cell;
-					padding: 3px;
-					text-align: center;
-					border-right: 1px solid rgb(199, 224, 224);
-					border-bottom: 1px solid #d2d2d2;
-					color: #000 !important;
-					background: #dff6f6 !important;
-					width: 75px;
-					&:nth-child(1) {
-						width: 120px;
-					}
-					&:nth-child(2) {
-						width: 250px;
-					}
-				}
-			}
-			tbody {
-				//	display: block;
-				overflow: auto;
-				min-height: 60vh;
-				max-height: 60vh;
-				tr {
-					//	display: table-cell;
-					td {
-						//	display: block;
-						padding: 3px;
-						text-align: center;
-						border-right: 1px solid #ececec;
-						border-top: 1px solid #ececec;
-						width: 75px;
-						&:nth-child(1) {
-							text-align: center;
-							width: 120px;
-						}
-						&:nth-child(2) {
-							text-align: left;
-							width: 250px;
-						}
-					}
-					&:nth-child(odd) {
-						background: #f2f2f2;
-					}
-					&:nth-child(even) {
-						background: #fff;
-					}
-				}
-			}
-		}
-	}
+  .legends {
+    color: white;
+    font-size: 12px;
+    padding: 5px;
+    font-size: 0.7em;
+    border-radius: 6px;
+  }
+
+  .time_cell {
+    background-color: "lightgray";
+    cursor: pointer;
+  }
+
+  .time_cell:hover {
+    background-color: rgb(88, 185, 192);
+  }
+
+  #shiftRosterTable {
+    .noTimeSheetData {
+      text-align: center;
+      color: rgba(0, 0, 0, 0.1);
+      h1 {
+        margin-top: 30px;
+      }
+      i {
+        font-size: 16em;
+        margin: 4vh 0 6vh;
+        color: rgba(0, 0, 0, 0.04);
+      }
+      width: 100%;
+    }
+
+    overflow: auto;
+    border: 1px solid #d2d2d2;
+    table {
+      width: 100%;
+      box-sizing: border-box;
+      table-layout: fixed;
+      min-height: 20vh;
+      max-height: 55vh;
+      thead {
+        th {
+          //			display: table-cell;
+          padding: 3px;
+          text-align: center;
+          border-right: 1px solid rgb(199, 224, 224);
+          border-bottom: 1px solid #d2d2d2;
+          color: #000 !important;
+          background: #dff6f6 !important;
+          width: 75px;
+          &:nth-child(1) {
+            width: 120px;
+          }
+          &:nth-child(2) {
+            width: 250px;
+          }
+        }
+      }
+      tbody {
+        //	display: block;
+        overflow: auto;
+        min-height: 60vh;
+        max-height: 60vh;
+        tr {
+          //	display: table-cell;
+          td {
+            //	display: block;
+            padding: 3px;
+            text-align: center;
+            border-right: 1px solid #ececec;
+            border-top: 1px solid #ececec;
+            width: 75px;
+            &:nth-child(1) {
+              text-align: center;
+              width: 120px;
+            }
+            &:nth-child(2) {
+              text-align: left;
+              width: 250px;
+            }
+          }
+          &:nth-child(odd) {
+            background: #f2f2f2;
+          }
+          &:nth-child(even) {
+            background: #fff;
+          }
+        }
+      }
+    }
+  }
 }
