--- a/client/src/Components/EmployeeShiftRostering/EmployeeShiftRostering.scss
+++ b/client/src/Components/EmployeeShiftRostering/EmployeeShiftRostering.scss
@@ -12,6 +12,16 @@
     cursor: pointer;
   }
 
+  .week_off_cell {
+    background: rgb(63, 156, 98);
+    color: white;
+  }
+
+  .holiday_cell {
+    background: rgb(63, 120, 156);
+    color: white;
+  }
+
   .time_cell:hover {
     background-color: rgb(88, 185, 192);
   }
