UI Tweak for Final Settlement and EOS

--- a/client/src/Components/PayrollManagement/SalaryManagement/SalaryManagement.css
+++ b/client/src/Components/PayrollManagement/SalaryManagement/SalaryManagement.css
@@ -6,3 +6,6 @@
 
 .salary_management #Salary_Management_Cntr .ReactTable {
   max-height: 63vh !important; }
+
+#MiscEarningsDeductionsGrid_Cntr .ReactTable {
+  max-height: 42vh !important; }
