--- a/client/src/Components/EmployeeShiftRostering/EmployeeShiftRostering.scss
+++ b/client/src/Components/EmployeeShiftRostering/EmployeeShiftRostering.scss
@@ -22,6 +22,11 @@
     color: white;
   }
 
+  .leave_cell {
+    background: rgb(135, 156, 63);
+    color: white;
+  }
+
   .time_cell:hover {
     background-color: rgb(88, 185, 192);
   }
