--- a/client/src/Components/PayrollManagement/PayrollSettings/EarningsDeductions/earnings_deductions.css
+++ b/client/src/Components/PayrollManagement/PayrollSettings/EarningsDeductions/earnings_deductions.css
@@ -30,6 +30,7 @@
     display: block;
     width: 100%;
     margin: 0;
+    font-size: 1.2em;
     background: #000;
     border-radius: 0;
     border: none;
