--- a/client/src/Components/PayrollManagement/PayrollSettings/EarningsDeductions/earnings_deductions.scss
+++ b/client/src/Components/PayrollManagement/PayrollSettings/EarningsDeductions/earnings_deductions.scss
@@ -35,7 +35,7 @@
       display: block;
       width: 100%;
       margin: 0;
-
+      font-size: 1.2em;
       background: #000;
       border-radius: 0;
       border: none;
