--- a/client/src/Components/EmployeeShiftRostering/EmployeeShiftRostering.css
+++ b/client/src/Components/EmployeeShiftRostering/EmployeeShiftRostering.css
@@ -52,9 +52,13 @@
       background: #dff6f6 !important;
       width: 75px; }
       .EmpShiftRost_Screen #shiftRosterTable table thead th:nth-child(1) {
+        text-align: center;
         width: 120px; }
       .EmpShiftRost_Screen #shiftRosterTable table thead th:nth-child(2) {
-        width: 250px; }
+        text-align: left;
+        width: 200px; }
+      .EmpShiftRost_Screen #shiftRosterTable table thead th:last-child, .EmpShiftRost_Screen #shiftRosterTable table thead th:nth-last-child(2) {
+        width: 100px; }
     .EmpShiftRost_Screen #shiftRosterTable table tbody {
       overflow: auto;
       min-height: 60vh;
@@ -70,7 +74,9 @@
           width: 120px; }
         .EmpShiftRost_Screen #shiftRosterTable table tbody tr td:nth-child(2) {
           text-align: left;
-          width: 250px; }
+          width: 200px; }
+        .EmpShiftRost_Screen #shiftRosterTable table tbody tr td:last-child, .EmpShiftRost_Screen #shiftRosterTable table tbody tr td:nth-last-child(2) {
+          width: 100px; }
       .EmpShiftRost_Screen #shiftRosterTable table tbody tr:nth-child(odd) {
         background: #f2f2f2; }
       .EmpShiftRost_Screen #shiftRosterTable table tbody tr:nth-child(even) {
