--- a/client/src/Components/EmployeeShiftRostering/EmployeeShiftRostering.scss
+++ b/client/src/Components/EmployeeShiftRostering/EmployeeShiftRostering.scss
@@ -65,10 +65,16 @@
           background: #dff6f6 !important;
           width: 75px;
           &:nth-child(1) {
+            text-align: center;
             width: 120px;
           }
           &:nth-child(2) {
-            width: 250px;
+            text-align: left;
+            width: 200px;
+          }
+          &:last-child,
+          &:nth-last-child(2) {
+            width: 100px;
           }
         }
       }
@@ -92,7 +98,11 @@
             }
             &:nth-child(2) {
               text-align: left;
-              width: 250px;
+              width: 200px;
+            }
+            &:last-child,
+            &:nth-last-child(2) {
+              width: 100px;
             }
           }
           &:nth-child(odd) {
