--- a/client/src/Components/Pharmacy/RequisitionList/RequisitionList.scss
+++ b/client/src/Components/Pharmacy/RequisitionList/RequisitionList.scss
@@ -13,6 +13,24 @@
     cursor: pointer;
   }
 
+  .bk-bn {
+    z-index: 1031;
+    position: fixed;
+    top: 56px;
+    right: 85px;
+    display: block;
+    height: 65px;
+    border: 1px solid #53ccd0;
+    width: 110px;
+    white-space: unset;
+    background: #dcfeff;
+
+    i {
+      display: block;
+      margin-bottom: 5px;
+    }
+  }
+
   th,
   td {
     border-right: 1px solid #e6e6e6;
